-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.0.0 Beta 2
-
None
-
Win 7 x64, MinGW 4.7.2, QtCreator 2.6.0
-
eefec0e0be6b589ff1db8ab44a7f6d3aa2b6ec60
Keyboard does not grab any more in last beta 2 release.
This can be reproduced in simple example:
add two text edits to the window and grab keyboard with one of them
try to switch focus, you can type in both.
| For Gerrit Dashboard: QTBUG-28070 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 40551,1 | Fix keyboard grab in QWidgetWindow. | master | qt/qtbase | Status: MERGED | +2 | 0 |